--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -38,6 +36,7 @@
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
+    "font-awesome": "^4.7.0",
     "mysql2": "^3.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
