--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-document-picker": "^13.0.2",
-    "expo-image-picker": "~16.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "^0.27.3",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "font-awesome": "^4.7.0",
@@ -45,14 +46,14 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-colors": "^2.4.0",
     "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-updates": "~0.27.3"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
