--- a/ios/Tunely/Info.plist
+++ b/ios/Tunely/Info.plist
@@ -38,7 +38,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string>1.0.0</string>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
@@ -58,6 +58,7 @@
     <string>Allow $(PRODUCT_NAME) to access your photos</string>
     <key>UIBackgroundModes</key>
     <array>
+      <string>audio</string>
       <string>audio</string>
     </array>
     <key>UILaunchStoryboardName</key>
