--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -3,18 +3,31 @@ name: EAS Update Deployment
 on:
   push:
     branches:
-      - main  # Change this if needed
+      - main  # Change this to your deployment branch
 
 jobs:
-  eas-update:
+  eas_update:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Authenticate with EAS
-        run: npx eas login --token ${{ secrets.EAS_ACCESS_TOKEN }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
 
-      - name: Publish update to EAS
-        run: npx eas update --branch preview --auto
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
+
+      - name: Authenticate with EAS
+        run: eas login --token ${{ secrets.EAS_ACCESS_TOKEN }}
+
+      - name: Get latest commit message
+        id: commit_message
+        run: echo "message=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+
+      - name: Run EAS Update
+        run: eas update --branch preview --message "${{ env.message }}"
