--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -3,7 +3,7 @@ name: EAS Update Deployment
 on:
   push:
     branches:
-      - main  # GitHub branch to trigger this workflow
+      - preview  # Changed to preview branch
 
 jobs:
   eas_update:
@@ -25,7 +25,7 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Authenticate with EAS
-        run: echo ${{ secrets.EAS_ACCESS_TOKEN }} | eas login
+        run: npx eas-cli login --non-interactive --token ${{ secrets.EAS_ACCESS_TOKEN }}
 
       - name: Get latest commit message
         id: commit_message
