--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-document-picker": "^13.0.2",
+    "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
