--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: npm  # Change to 'yarn' if you use yarn
+          cache: npm  
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
