--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "auth": "^1.2.3",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expo": "~52.0.25",
