--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
     "plugins": [
       "expo-image-picker",
       "@react-native-google-signin/google-signin",
+      "@react-native-community/datetimepicker",
       [
         "expo-av",
         {
